--- a/css/square-responsive-menu.css
+++ b/css/square-responsive-menu.css
@@ -5,9 +5,14 @@
  * 11 February 2013
  */
 
+
 /*--------------  SAFELY CUSTOMIZABLE - Visual styling for menu elements -------------------*/
 
-.active { background-color: #FED22F !important; color: #333333 !important; z-index: 15; }
+.active { 
+	background-color: #FED22F !important; 
+	color: #333333 !important; 
+	z-index: 15; 
+}
 
 #square-menu { 
 	font-size: 0.8em;
@@ -21,18 +26,21 @@
 	width: 50px;
 	height: 50px;
 	border: 1px solid #555555;
-	background: #ffffff url('../image/3-lines.png') no-repeat center center;
+	background: #ffffff url('../images/3-lines.png') no-repeat center center;
 }
 	#toggle-square:hover, #toggle-square:active, #toggle-square.active { 
-		background: #FED22F url('../image/3-lines.png') no-repeat center center; 
+		background: #FED22F url('../images/3-lines.png') no-repeat center center; 
 	}
 
 
 /* -------------- Menu Levels general styling -------------- */
 
-#square-menu ul.level-1 { }
-#square-menu ul.level-2 { }
-#square-menu ul.level-3 { }
+#square-menu ul.level-1 { 
+}
+#square-menu ul.level-2 { 
+}
+#square-menu ul.level-3 { 
+}
 
 
 /* -------------- Menu Items -------------- */
@@ -41,20 +49,40 @@
 	background: #ffffff;
 	border: 1px solid #999999;	
 }
-	#square-menu ul li.active > a { color: #333333; }
-	#square-menu ul li.have-subs > a { background: url("../image/multi-level-arrow.png") no-repeat right bottom; }
+	/*
+	#square-menu ul li.have-subs { 
+		border: 1px solid #FF4900; 
+	} 
+	*/
 
+/* -------------- Menu Items - Links -------------- */
 #square-menu ul li > a {
 	color: #EE5500;
 	background: #ffffff;
 }	
-	#square-menu ul li > a:hover { background-color: #FED22F; color: #333333 }	
-	
+	#square-menu ul li.have-subs > a { 
+		background: url("../images/multi-level-arrow.png") no-repeat right bottom; 
+	}
+	#square-menu ul li.active > a { 
+		color: #333333; 
+	}
+	#square-menu ul li > a:hover { 
+		background-color: #FED22F; 
+		color: #333333;
+	}
+
+
 /*--------------------------- RESTRICTED - Should not be modified ---------------------------*/
 	
-input:focus { outline: none; }
-.hide { display: none !important; }
-.show { display: inherit !important; }	
+input:focus { 
+	outline: none; 
+}
+.hide { 
+	display: none !important; 
+}
+.show { 
+	display: inherit !important; 
+}	
 
 #toggle-square {
 	cursor: pointer;
@@ -62,9 +90,16 @@ input:focus { outline: none; }
 	margin-bottom: 1px;
 }
 	
-#square-menu ul.level-1 { z-index: 1; position: absolute }
-#square-menu ul.level-2 { z-index: 3 }
-#square-menu ul.level-3 { z-index: 5 }
+#square-menu ul.level-1 { 
+	z-index: 1; 
+	position: absolute;
+}
+#square-menu ul.level-2 { 
+	z-index: 3; 
+}
+#square-menu ul.level-3 { 
+	z-index: 5; 
+}
 	#square-menu ul.level-2, 
 	#square-menu ul.level-3 {
 		padding: 0;
@@ -90,3 +125,4 @@ input:focus { outline: none; }
 	vertical-align: middle;
 	text-decoration: none; 
 }
+
